--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--Random Testing Comment-->
 <html>
 	<head>
-		<title>PSE</title>
+		<title>Programmers in Science &amp; Engineering</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -73,7 +73,7 @@
 			<!-- Carousel -->
 				<section class="carousel" id="what-we-do">
 
-					<center><h2><a href="#what-we-do" class="hvr-underline-from-center">What We Do</a></h2></center>
+					<center><h2><a href="#what-we-do" class="hvr-underline-from-left">What We Do</a></h2></center>
 					<br>
 
 					<div>
@@ -84,7 +84,7 @@
 							<i class="fa fa-graduation-cap fa-5x doers-icons" aria-hidden="true"></i>
 							<div class="article-description">
 							<header>
-								<h3><a href="#" class="hvr-underline-from-center">Workshops</a></h3>
+								<h3><a href="#" class="hvr-underline-from-left">Workshops</a></h3>
 							</header>
 							<p>Sessions that aim to help everyone from beginners to advanced learn as much as possible. Topics cover programming for beginners, scientific computing using Python, and more. </p>
 							</div>
@@ -95,7 +95,7 @@
 							<i class="fa fa-paper-plane-o fa-5x doers-icons" aria-hidden="true"></i>
 							<div class="article-description">
 							<header>
-								<h3><a href="#" class="hvr-underline-from-center">General Meetings</a></h3>
+								<h3><a href="#" class="hvr-underline-from-left">General Meetings</a></h3>
 							</header>
 							<p>Where we invite faculty and companies who use programming in their work to discuss about their projects and real life applications.</p>
 						  </div>
@@ -107,7 +107,7 @@
 
 							<div class="article-description">
 							<header>
-								<h3><a href="#" class="hvr-underline-from-center">Meetups &amp; Social Events</a></h3>
+								<h3><a href="#" class="hvr-underline-from-left">Meetups &amp; Social Events</a></h3>
 							</header>
 							<p>So we can meetup, practice, and ask questions about anything. While having fun.</p>
 						</div>
@@ -123,7 +123,7 @@
 					<article id="our-passion" class="container special">
 						<header>
 							<br>
-							<h2><a href="#" class="hvr-underline-from-center">What We Are Passionate About</a></h2>
+							<h2><a href="#" class="hvr-underline-from-left">What We Are Passionate About</a></h2>
 						</header>
 						<br>
 						<ul class="b">
@@ -141,7 +141,7 @@
 					<article id="join-us" class="container special" >
 						<header>
 							<br>
-							<h2><a href="#join-us" class="hvr-underline-from-center">Join Us. It's free.</a></h2>
+							<h2><a href="#join-us" class="hvr-underline-from-left">Join Us. It's free.</a></h2>
 						</header>
 						<br>
 
@@ -307,7 +307,12 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/particles.js"></script>
-			<script src="blah/blah.js" charset="utf-8"></script>
+			
+
+			<script src="build/bundle.js" charset="utf-8"></script>
+			<!-- Important! Before doing a production build, the transpiled react code needs to be placed into transpiled-production-code.js and the above script needs to be replace with: -->
+			<!-- <script src="transpiled-production-code/transpiled-production-code.js" charset="utf-8"></script> -->
+			
 			<script>
 			function Typer (element, options, scenes) {
 	// we define some default options to
